hard-gists/b9768b4eefe679c988ce/run.log
=== Docker Run Log for b9768b4eefe679c988ce ===
Started at: Mi 29. Okt 19:34:00 CET 2025

[2025-10-29 19:34:00] START: Running container for b9768b4eefe679c988ce
[2025-10-29 19:34:00] SUCCESS: Container 5bb0b53b9ec1bab58c08ec6ee750593b15d3df6c8fd9550e2f5852fc5ff8c0cb started for b9768b4eefe679c988ce
=== Container logs for b9768b4eefe679c988ce ===
  File "/snippet.py", line 135
    print fn.filename()
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for b9768b4eefe679c988ce ===
[2025-10-29 19:34:02] INFO: Container 5bb0b53b9ec1bab58c08ec6ee750593b15d3df6c8fd9550e2f5852fc5ff8c0cb has stopped
